--- a/styles.css
+++ b/styles.css
@@ -296,6 +296,58 @@ form {
   margin: 0 auto;
 }
 
+/* CSS for Blogs */
+
+.post-title {
+  margin-bottom: -10px;
+}
+.post-subtitle {
+  margin-left: 25px;
+  margin-bottom: -8px;
+}
+.post-description {
+  margin-bottom: 5px;
+}
+.read-link-prompt {
+  margin-left: 37px;
+}
+
+
+.post-preview {
+  background-color: var(--cg-egg-green);
+  flex: 1;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  border: 5px solid var(--cg-grey-green);
+  padding-bottom: 20px;
+}
+
+/* CSS for blogpost pages */
+
+.blog-title {
+  margin-bottom: -10px;
+}
+.blog-subtitle {
+  margin-left: 25px;
+}
+.blog-description {
+  margin-bottom: 5px;
+}
+
+.blogpost {
+  background-color: var(--cg-egg-green);
+  flex: 1;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  border: 5px solid var(--cg-grey-green);
+  padding-bottom: 20px;
+}
+
 /* CSS for footer */
 
 .footer {
