--- a/bootcamp-milestone-2/src/app/portfolio/portfolio.module.css
+++ b/bootcamp-milestone-2/src/app/portfolio/portfolio.module.css
@@ -9,7 +9,7 @@
   }
   
   .projectdescription {
-    font-size: 1.15em;
+    font-size: 1.25em;
   }
   
   .itemlink {
@@ -54,6 +54,26 @@
   
     /* Debug border */
     /* border: 2px solid green; */
+  }
+
+  .postcontainer {
+    align-items: center;
+    align-self: center;
+    text-align: center;
+    overflow: hidden;
+  }
+
+  .postpreview {
+    margin-top: 50px;
+    align-items: center;
+    background-color: var(--cg-egg-green);
+    flex: 1;
+    margin-left: 400px;
+    margin-right: 400px;
+    margin-bottom: 30px;
+    border-radius: 10px;
+    border: 5px solid var(--cg-grey-green);
+    padding-bottom: 20px;
   }
   
   .projectdetails a {
