feat: added comments, created footer component, added coments and page styling, added moment extension

--- a/Milestone3B/src/app/globals.css
+++ b/Milestone3B/src/app/globals.css
@@ -121,6 +121,10 @@
     justify-content: center;
     align-items: center;
   }
+
+  .pageFormatting {
+    padding-bottom: 50px;
+  }
   
   .page-title {
     display: flex;
