--- a/Milestone3B/src/app/components/blogPreview.module.css
+++ b/Milestone3B/src/app/components/blogPreview.module.css
@@ -2,13 +2,15 @@
 .blogpostcontainer {
     align-items: center;
     align-self: center;
-    text-align: center;
+    text-align: left;
     overflow: hidden;
+    margin-left: 30px;
+    margin-right: 30px;
   }
 
   .posttitle {
     font-size: 1.5em;
-    margin-bottom: -8px;
+    margin-bottom: 5px;
     /*margin-bottom: -10px;
     margin-left: 20px;
     margin-right: 20px;
@@ -19,7 +21,7 @@
     /*margin-left: 25px;
     margin-right: 25px;
     */
-    margin-bottom: -8px;
+    margin-bottom: 10px;
   }
   
   .postdescription {
@@ -34,7 +36,7 @@
     margin-right: 25px;
     */
     font-size: 1.05em;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 5px;
   }
 /*
