--- a/Milestone3B/src/app/components/footer.module.css
+++ b/Milestone3B/src/app/components/footer.module.css
@@ -1,3 +1,4 @@
+
 .footer {
     display: flex;
     justify-content: center;
@@ -8,4 +9,5 @@
     bottom: 0;
     width: 100%;
     height: 2.5rem;
+    margin-top: 60px;
   }
