--- a/Milestone3B/src/app/components/comments.module.css
+++ b/Milestone3B/src/app/components/comments.module.css
@@ -25,8 +25,8 @@
     }
 
     .commentPost {
-        align-items: center;
-        align-self: center;
+        /* align-items: center;
+        align-self: center; */
         text-align: left;
         overflow: hidden;
         margin-left: 30px;
@@ -46,6 +46,7 @@
         font-size: 0.8em;
         font-style: oblique;
         float: left;
+        margin-right: -10000px;
     }
 
     .commentTime {
@@ -57,6 +58,6 @@
     .commentContent {
         overflow-wrap: break-word;
         font-size: 0.8em;
-        padding-right: 10px;
-        text-align: left;
+        /* padding-right: 10px; */
+        /* text-align: left; */
     }
